--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
   </section>
   <section id="valor_total_livros_disponiveis">
     <div class="livros__disponiveis">
-      <p>Todos os livros disponíveis por R$ <span id="valor">299,00</span></p>
+      <p>Todos os livros disponíveis por R$ <span id="valor">199,00</span></p>
     </div>
   </section>
 
@@ -278,6 +278,7 @@
   <script src="app/metodoMap.js"></script>
   <script src="app/metodoFilter.js"></script>
   <script src="app/metodoSort.js"></script>
+  <script src="app/metodoReduce.js"></script>
 </body>
 
 </html>
